Update certainty pairs

--- a/js_analysis.ipynb
+++ b/js_analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 21,
    "id": "3cc6acb3",
    "metadata": {},
    "outputs": [],
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 22,
    "id": "8fdc2318",
    "metadata": {},
    "outputs": [
@@ -26,8 +26,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Treatment samples: 504\n",
-      "Control samples: 336\n"
+      "Data Treatment samples: 504, Data Control samples: 336\n",
+      "Pred Treatment samples: 503, Pred Control samples: 335\n",
+      "Predictions missing keys - Treatment: {50}, Control: {50}\n"
      ]
     }
    ],
@@ -42,20 +43,34 @@
     "for x in ['Probabilities Target is prize with certainty', 'Probabilities Target is risky too']:\n",
     "    df[x] = df[x].apply(lambda x: float(x) if pd.notna(x) and x != '' else np.nan)\n",
     "\n",
-    "# Load the original Treatment and Control JSON data\n",
+    "# Load the original DATA JSONs (for pairing by subtemplates)\n",
     "with open('/Users/johnathansun/Documents/InstructedToBias/Data/certainty/all_permutations/t_[1, 2, 3]_three_probs,two_probs_Treatment.json') as f:\n",
     "    treatment_data = json.load(f)\n",
     "\n",
     "with open('/Users/johnathansun/Documents/InstructedToBias/Data/certainty/all_permutations/t_[1, 2, 3]_three_probs,two_probs_Control.json') as f:\n",
     "    control_data = json.load(f)\n",
     "\n",
-    "print(f\"Treatment samples: {len(treatment_data)}\")\n",
-    "print(f\"Control samples: {len(control_data)}\")"
+    "# Load the PREDICTIONS JSONs (for mapping keys to CSV positions - these may have gaps!)\n",
+    "with open('/Users/johnathansun/Documents/InstructedToBias/Predictions/certainty/all_permutations/Olmo-3-7B-Instruct/few_shot_0/gen_pred/format_False_task_False/t_[1, 2, 3]_three_probs,two_probs_Treatment_with_metadata.json') as f:\n",
+    "    pred_treatment = json.load(f)\n",
+    "\n",
+    "with open('/Users/johnathansun/Documents/InstructedToBias/Predictions/certainty/all_permutations/Olmo-3-7B-Instruct/few_shot_0/gen_pred/format_False_task_False/t_[1, 2, 3]_three_probs,two_probs_Control_with_metadata.json') as f:\n",
+    "    pred_control = json.load(f)\n",
+    "\n",
+    "print(f\"Data Treatment samples: {len(treatment_data)}, Data Control samples: {len(control_data)}\")\n",
+    "print(f\"Pred Treatment samples: {len(pred_treatment)}, Pred Control samples: {len(pred_control)}\")\n",
+    "\n",
+    "# Check for gaps in Predictions\n",
+    "pred_treat_keys = set(int(k) for k in pred_treatment.keys())\n",
+    "pred_ctrl_keys = set(int(k) for k in pred_control.keys())\n",
+    "treat_missing = set(range(max(pred_treat_keys)+1)) - pred_treat_keys\n",
+    "ctrl_missing = set(range(max(pred_ctrl_keys)+1)) - pred_ctrl_keys\n",
+    "print(f\"Predictions missing keys - Treatment: {treat_missing}, Control: {ctrl_missing}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 23,
    "id": "w62fjgrj85i",
    "metadata": {},
    "outputs": [
@@ -104,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 24,
    "id": "jasmwxknt8k",
    "metadata": {},
    "outputs": [
@@ -149,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 25,
    "id": "03yxk2yz6sxo",
    "metadata": {},
    "outputs": [
@@ -157,11 +172,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Predictions keys used for CSV lookup:\n",
+      "  Treatment: 503 keys, missing: {50}\n",
+      "  Control: 335 keys, missing: {50}\n",
+      "\n",
       "control_answer         treatment_answer     \n",
-      "better_expected_value  better_expected_value    136\n",
-      "target                 target                    91\n",
-      "better_expected_value  target                    86\n",
-      "target                 better_expected_value     22\n",
+      "better_expected_value  target                   120\n",
+      "                       better_expected_value    101\n",
+      "target                 target                    94\n",
+      "                       better_expected_value     19\n",
       "Name: count, dtype: int64\n"
      ]
     }
@@ -170,31 +189,66 @@
     "# Add model predictions to pairs\n",
     "# The full_answers CSV has Treatment answers in row \"Target is prize with certainty\"\n",
     "# and Control answers in row \"Target is risky too\"\n",
-    "# The column index corresponds to the sample index in the original data\n",
     "\n",
-    "# Reset df index to get numeric indices\n",
-    "df_reset = df.reset_index()\n",
-    "df_reset['orig_idx'] = df_reset['index'].astype(int)\n",
+    "# IMPORTANT: CSV columns are positionally aligned with PREDICTIONS JSONs (not Data JSONs)\n",
+    "# The Predictions JSONs may have gaps (e.g., missing key '50')\n",
     "\n",
-    "# Map predictions to pairs\n",
-    "pairs_df['treatment_answer'] = pairs_df['treatment_idx'].apply(\n",
-    "    lambda idx: df_reset.loc[df_reset['orig_idx'] == idx, 'Target is prize with certainty'].values[0] \n",
-    "    if idx in df_reset['orig_idx'].values else None\n",
-    ")\n",
-    "pairs_df['control_answer'] = pairs_df['control_idx'].apply(\n",
-    "    lambda idx: df_reset.loc[df_reset['orig_idx'] == idx, 'Target is risky too'].values[0] \n",
-    "    if idx in df_reset['orig_idx'].values else None\n",
-    ")\n",
+    "# Get the PREDICTIONS keys in order (these determine CSV column positions)\n",
+    "pred_treatment_keys = list(pred_treatment.keys())\n",
+    "pred_control_keys = list(pred_control.keys())\n",
     "\n",
-    "# Also get probabilities\n",
-    "pairs_df['treatment_prob'] = pairs_df['treatment_idx'].apply(\n",
-    "    lambda idx: df_reset.loc[df_reset['orig_idx'] == idx, 'Probabilities Target is prize with certainty'].values[0] \n",
-    "    if idx in df_reset['orig_idx'].values else None\n",
-    ")\n",
-    "pairs_df['control_prob'] = pairs_df['control_idx'].apply(\n",
-    "    lambda idx: df_reset.loc[df_reset['orig_idx'] == idx, 'Probabilities Target is risky too'].values[0] \n",
-    "    if idx in df_reset['orig_idx'].values else None\n",
-    ")\n",
+    "# Create key-to-position mappings using PREDICTIONS keys\n",
+    "pred_treatment_key_to_pos = {k: i for i, k in enumerate(pred_treatment_keys)}\n",
+    "pred_control_key_to_pos = {k: i for i, k in enumerate(pred_control_keys)}\n",
+    "\n",
+    "# The df index after transpose is the CSV column names (0, 1, 2, ...)\n",
+    "# df.iloc[pos] gives the row at that POSITION, which corresponds to Predictions key at that position\n",
+    "\n",
+    "def get_treatment_answer(treatment_idx):\n",
+    "    \"\"\"Get treatment answer by Data key, looking up via Predictions position in CSV\"\"\"\n",
+    "    key = str(treatment_idx)\n",
+    "    if key not in pred_treatment_key_to_pos:\n",
+    "        return None\n",
+    "    pos = pred_treatment_key_to_pos[key]\n",
+    "    if pos >= len(df):\n",
+    "        return None\n",
+    "    return df.iloc[pos]['Target is prize with certainty']\n",
+    "\n",
+    "def get_control_answer(control_idx):\n",
+    "    \"\"\"Get control answer by Data key, looking up via Predictions position in CSV\"\"\"\n",
+    "    key = str(control_idx)\n",
+    "    if key not in pred_control_key_to_pos:\n",
+    "        return None\n",
+    "    pos = pred_control_key_to_pos[key]\n",
+    "    if pos >= len(df):\n",
+    "        return None\n",
+    "    val = df.iloc[pos]['Target is risky too']\n",
+    "    return val if pd.notna(val) else None\n",
+    "\n",
+    "def get_treatment_prob(treatment_idx):\n",
+    "    key = str(treatment_idx)\n",
+    "    if key not in pred_treatment_key_to_pos:\n",
+    "        return None\n",
+    "    pos = pred_treatment_key_to_pos[key]\n",
+    "    if pos >= len(df):\n",
+    "        return None\n",
+    "    val = df.iloc[pos]['Probabilities Target is prize with certainty']\n",
+    "    return float(val) if pd.notna(val) else None\n",
+    "\n",
+    "def get_control_prob(control_idx):\n",
+    "    key = str(control_idx)\n",
+    "    if key not in pred_control_key_to_pos:\n",
+    "        return None\n",
+    "    pos = pred_control_key_to_pos[key]\n",
+    "    if pos >= len(df):\n",
+    "        return None\n",
+    "    val = df.iloc[pos]['Probabilities Target is risky too']\n",
+    "    return float(val) if pd.notna(val) and val != '' else None\n",
+    "\n",
+    "pairs_df['treatment_answer'] = pairs_df['treatment_idx'].apply(get_treatment_answer)\n",
+    "pairs_df['control_answer'] = pairs_df['control_idx'].apply(get_control_answer)\n",
+    "pairs_df['treatment_prob'] = pairs_df['treatment_idx'].apply(get_treatment_prob)\n",
+    "pairs_df['control_prob'] = pairs_df['control_idx'].apply(get_control_prob)\n",
     "\n",
     "# Add target position info\n",
     "# permutation_index=1 means target is Option B (second), permutation_index=2 means target is Option A (first)\n",
@@ -202,12 +256,16 @@
     "    lambda x: 'Option B (second)' if x == 1 else 'Option A (first)'\n",
     ")\n",
     "\n",
+    "print(f\"Predictions keys used for CSV lookup:\")\n",
+    "print(f\"  Treatment: {len(pred_treatment_keys)} keys, missing: {treat_missing}\")\n",
+    "print(f\"  Control: {len(pred_control_keys)} keys, missing: {ctrl_missing}\")\n",
+    "print()\n",
     "print(pairs_df[['control_answer', 'treatment_answer']].value_counts())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 26,
    "id": "jehedw0w01",
    "metadata": {},
    "outputs": [
@@ -215,14 +273,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Pairs showing certainty effect (chose higher EV in control, target in treatment): 86\n",
-      "Out of 336 total pairs (25.6%)\n",
+      "Pairs showing certainty effect (chose higher EV in control, target in treatment): 120\n",
+      "Out of 336 total pairs (35.7%)\n",
       "\n",
-      "Breakdown of all pairs (n=335 valid, 1 missing):\n",
-      "  Certainty effect (EV→target): 86 (25.7%)\n",
-      "  Anti-certainty (target→EV): 22 (6.6%)\n",
-      "  Consistent higher EV: 136 (40.6%)\n",
-      "  Consistent target: 91 (27.2%)\n"
+      "Breakdown of all pairs (n=334 valid, 2 missing):\n",
+      "  Certainty effect (EV→target): 120 (35.9%)\n",
+      "  Anti-certainty (target→EV): 19 (5.7%)\n",
+      "  Consistent higher EV: 101 (30.2%)\n",
+      "  Consistent target: 94 (28.1%)\n"
      ]
     }
    ],
@@ -267,7 +325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 27,
    "id": "hfb5knuq06",
    "metadata": {},
    "outputs": [
@@ -355,7 +413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 28,
    "id": "lt6h554rb6j",
    "metadata": {},
    "outputs": [
@@ -365,8 +423,8 @@
      "text": [
       "Certainty effect breakdown by bias_type_index:\n",
       "bias_type_index\n",
-      "1    49\n",
-      "2    37\n",
+      "1    64\n",
+      "2    56\n",
       "dtype: int64\n",
       "\n",
       "(1 = Common Consequence / three_probs, 2 = Common Ratio / two_probs)\n",
@@ -374,28 +432,28 @@
       "\n",
       "Certainty effect breakdown by template:\n",
       "template\n",
-      "1    36\n",
-      "2    26\n",
-      "3    24\n",
+      "1    45\n",
+      "2    43\n",
+      "3    32\n",
       "dtype: int64\n",
       "\n",
       "\n",
       "Certainty effect breakdown by vals_index:\n",
       "vals_index\n",
-      "1    13\n",
-      "2    11\n",
-      "3     7\n",
-      "4    12\n",
-      "5    14\n",
-      "6    16\n",
-      "7    13\n",
+      "1    17\n",
+      "2    16\n",
+      "3     9\n",
+      "4    17\n",
+      "5    21\n",
+      "6    22\n",
+      "7    18\n",
       "dtype: int64\n",
       "\n",
       "\n",
       "Certainty effect breakdown by target position:\n",
       "permutation_index\n",
-      "1    53\n",
-      "2    33\n",
+      "1    63\n",
+      "2    57\n",
       "dtype: int64\n",
       "(1 = target in Option B/second, 2 = target in Option A/first)\n"
      ]
@@ -420,7 +478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 29,
    "id": "8w6dzemwbrb",
    "metadata": {},
    "outputs": [
@@ -433,16 +491,16 @@
       "================================================================================\n",
       "\n",
       "Option B (second) (n=168):\n",
-      "  Certainty effect (EV→target): 53 (31.5%)\n",
-      "  Anti-certainty (target→EV):   13 (7.7%)\n",
-      "  Consistent higher EV:         15 (8.9%)\n",
-      "  Consistent target:            87 (51.8%)\n",
+      "  Certainty effect (EV→target): 63 (37.5%)\n",
+      "  Anti-certainty (target→EV):   5 (3.0%)\n",
+      "  Consistent higher EV:         89 (53.0%)\n",
+      "  Consistent target:            9 (5.4%)\n",
       "\n",
       "Option A (first) (n=168):\n",
-      "  Certainty effect (EV→target): 33 (19.6%)\n",
-      "  Anti-certainty (target→EV):   9 (5.4%)\n",
-      "  Consistent higher EV:         121 (72.0%)\n",
-      "  Consistent target:            4 (2.4%)\n"
+      "  Certainty effect (EV→target): 57 (33.9%)\n",
+      "  Anti-certainty (target→EV):   14 (8.3%)\n",
+      "  Consistent higher EV:         12 (7.1%)\n",
+      "  Consistent target:            85 (50.6%)\n"
      ]
     }
    ],
@@ -468,7 +526,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 30,
    "id": "qced5hgtepe",
    "metadata": {},
    "outputs": [
@@ -481,12 +539,12 @@
       "================================================================================\n",
       "\n",
       "Control condition:\n",
-      "  Chose Option A (first):  81 (24.1%)\n",
-      "  Chose Option B (second): 255 (75.9%)\n",
+      "  Chose Option A (first):  252 (75.0%)\n",
+      "  Chose Option B (second): 84 (25.0%)\n",
       "\n",
       "Treatment condition:\n",
-      "  Chose Option A (first):  65 (19.3%)\n",
-      "  Chose Option B (second): 271 (80.7%)\n"
+      "  Chose Option A (first):  237 (70.5%)\n",
+      "  Chose Option B (second): 99 (29.5%)\n"
      ]
     }
    ],
@@ -522,7 +580,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 31,
    "id": "s5moga8d4i9",
    "metadata": {},
    "outputs": [
@@ -535,17 +593,17 @@
       "================================================================================\n",
       "\n",
       "Control condition - P(choose target):\n",
-      "  Target in Option A (first): 7.7%\n",
-      "  Target in Option B (second): 59.5%\n",
+      "  Target in Option A (first): 58.9%\n",
+      "  Target in Option B (second): 8.3%\n",
       "\n",
       "Treatment condition - P(choose target):\n",
-      "  Target in Option A (first): 22.0%\n",
-      "  Target in Option B (second): 83.3%\n",
+      "  Target in Option A (first): 84.5%\n",
+      "  Target in Option B (second): 42.9%\n",
       "\n",
       "\n",
       "Certainty effect by position (Treatment - Control target rate):\n",
-      "  Target in Option A (first): 14.3pp\n",
-      "  Target in Option B (second): 23.8pp\n"
+      "  Target in Option A (first): 25.6pp\n",
+      "  Target in Option B (second): 34.5pp\n"
      ]
     }
    ],
@@ -577,7 +635,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 32,
    "id": "ec3vf20xuar",
    "metadata": {},
    "outputs": [
@@ -753,7 +811,7 @@
        "20  Option B (second)  better_expected_value           target  "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -771,7 +829,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 33,
    "id": "c7e03b91",
    "metadata": {},
    "outputs": [],
