Take sample of questions with contrasting answers

--- a/js_certainty_steering.ipynb
+++ b/js_certainty_steering.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 1,
    "id": "1c4519a1",
    "metadata": {},
    "outputs": [],
@@ -18,28 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
-   "id": "e39d9498",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "PosixPath('/n/netscratch/sham_lab/Lab/jlsun/InstructedToBias/hf_cache')"
-      ]
-     },
-     "execution_count": 126,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "cache_dir"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "209713e5",
    "metadata": {},
    "outputs": [
@@ -49,9 +28,26 @@
      "text": [
       "device: cuda\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
+    "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns\n",
+    "\n",
+    "# set dpi to 300\n",
+    "plt.rcParams['figure.dpi'] = 300\n",
+    "\n",
     "import openai\n",
     "import json\n",
     "import numpy as np\n",
@@ -69,32 +65,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "7330c90d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import pandas as pd\n",
-    "import matplotlib.pyplot as plt\n",
-    "import seaborn as sns\n",
-    "\n",
-    "# set dpi to 300\n",
-    "plt.rcParams['figure.dpi'] = 300"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "53b02402",
+   "execution_count": 3,
+   "id": "6ee7decc",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "False"
+       "True"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -106,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "5eeaa22c",
    "metadata": {},
    "outputs": [],
@@ -116,7 +97,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 30,
+   "id": "31e95150",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "RANDOM_STATE = 42"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "id": "1f5bc0f0",
    "metadata": {},
    "outputs": [
@@ -124,13 +115,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "`torch_dtype` is deprecated! Use `dtype` instead!\n"
+      "`torch_dtype` is deprecated! Use `dtype` instead!\n",
+      "Skipping import of cpp extensions due to incompatible torch version 2.8.0+cu128 for torchao version 0.14.1             Please see https://github.com/pytorch/ao/issues/2919 for more info\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "13b36678430d4638946d92bc9af7f5a1",
+       "model_id": "72a87252252c438b88d62ced3e1181e7",
        "version_major": 2,
        "version_minor": 0
       },
@@ -149,28 +141,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
-   "id": "a46d47fb",
+   "execution_count": 9,
+   "id": "bc1ed8a1",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv(\"Question_Subsets/certainty_effect_pairs.csv\", index_col=0).reset_index()"
+    "def parse_answer(answer):\n",
+    "    answer_chunks = answer.strip().split(\" \")\n",
+    "    for c in answer_chunks:\n",
+    "        if c == \"A\":\n",
+    "            return \"A\"\n",
+    "        elif c == \"B\":\n",
+    "            return \"B\"\n",
+    "    return \"X\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
-   "id": "ff2adc1f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "RANDOM_STATE = 42\n",
-    "df_sample = df.sample(10, random_state=RANDOM_STATE)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 15,
    "id": "c5874e78",
    "metadata": {},
    "outputs": [],
@@ -179,27 +167,12 @@
     "    if system_prompt:\n",
     "        return [{\"role\": \"system\", \"content\": system_prompt}, {\"role\": \"user\", \"content\": prompt}]\n",
     "    else:\n",
-    "        return [{\"role\": \"user\", \"content\": prompt}]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 139,
-   "id": "b82ef594",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "system_prompt = \"You are a helpful assistant. Answer shortly with only your choice with no explanation.\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 140,
-   "id": "78424113",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "        return [{\"role\": \"user\", \"content\": prompt}]\n",
+    "\n",
     "def get_response(input):\n",
+    "\n",
+    "    system_prompt = \"You are a helpful assistant. Answer shortly with only your choice with no explanation.\"\n",
+    "\n",
     "    msg = get_message(input, system_prompt)\n",
     "    input = tokenizer.apply_chat_template(msg, return_tensors=\"pt\", add_generation_prompt=True, return_dict=True).to(device)\n",
     "    gen = model.generate(**input, max_new_tokens=200, pad_token_id=tokenizer.eos_token_id, do_sample=False)\n",
@@ -208,104 +181,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
-   "id": "7219e205",
+   "execution_count": null,
+   "id": "a46d47fb",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# test pair\n",
-    "i = 3\n",
+    "df = pd.read_csv(\"Question_Subsets/certainty_effect_pairs.csv\", index_col=0).reset_index()\n",
+    "df['control_resp_full'] = ''\n",
+    "df['treatment_resp_full'] = ''\n",
     "\n",
-    "control_text = df_sample.iloc[i]['control_text']\n",
-    "treatment_text = df_sample.iloc[i]['treatment_text']"
+    "df['control_resp'] = ''\n",
+    "df['treatment_resp'] = ''"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
-   "id": "dad3b1be",
+   "execution_count": 18,
+   "id": "14758eef",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Below you will find two options for getting a prize.\n",
-      "Option A - $1000 with a 25% chance, $0 with a 75% chance.\n",
-      "Option B - $850 with a 26% chance, $0 with a 74% chance.\n",
-      "Given that these are the only options, which one would you choose?\n",
-      "Answer:\n"
+      "The following generation flags are not valid and may be ignored: ['temperature', 'top_p']. Set `TRANSFORMERS_VERBOSITY=info` for more details.\n"
      ]
-    }
-   ],
-   "source": [
-    "print(control_text)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 143,
-   "id": "afd8e05d",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Below you will find two options for getting a prize.\n",
-      "Option A - $1000 with a 25% chance, $850 with a 74% chance, $0 with a 1% chance.\n",
-      "Option B - $850 with certainty.\n",
-      "Given that these are the only options, which one would you choose?\n",
-      "Answer:\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(treatment_text)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 144,
-   "id": "a0926621",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "index                                                              144\n",
-       "match_key                                           (2, 1, 5, 1, 1, 1)\n",
-       "control_idx                                                        144\n",
-       "treatment_idx                                                      216\n",
-       "control_text         Below you will find two options for getting a ...\n",
-       "treatment_text       Below you will find two options for getting a ...\n",
-       "template                                                             2\n",
-       "bias_type_index                                                      1\n",
-       "vals_index                                                           5\n",
-       "permutation_index                                                    1\n",
-       "treatment_answer                                                target\n",
-       "control_answer                                   better_expected_value\n",
-       "treatment_prob                                               -0.632625\n",
-       "control_prob                                                 -0.252373\n",
-       "target_position                                      Option B (second)\n",
-       "Name: 55, dtype: object"
-      ]
-     },
-     "execution_count": 144,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df_sample.iloc[i]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 145,
-   "id": "43e60ea5",
-   "metadata": {},
-   "outputs": [
+    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -800,11 +701,77 @@
     "\n",
     "    control_resp = get_response(control_text)\n",
     "    treatment_resp = get_response(treatment_text)\n",
+    "\n",
+    "    df.at[i, 'control_resp_full'] = control_resp\n",
+    "    df.at[i, 'treatment_resp_full'] = treatment_resp\n",
+    "\n",
+    "    df.at[i, 'control_resp'] = parse_answer(control_resp)\n",
+    "    df.at[i, 'treatment_resp'] = parse_answer(treatment_resp)\n",
+    "\n",
     "    print(i)\n",
     "    print(control_resp)\n",
+    "\n",
     "    print(treatment_resp)\n",
     "    print('---')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "3fd4ab4a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df['control_resp_eq_treatment_resp'] = df.control_resp == df.treatment_resp"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "9adf3655",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.to_csv('Question_Subsets/certainty_effect_pairs_with_answers.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "4d166784",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_switch = df[df.control_resp != df.treatment_resp]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "ef812bf5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_switch_sample = df_switch.sample(10, random_state=RANDOM_STATE)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "fa7fb5c7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_switch_sample.to_csv('Question_Subsets/certainty_effect_pairs_switch_sample.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9e90d579",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
